--- a/.github/workflows/work-pr.yml
+++ b/.github/workflows/work-pr.yml
@@ -3,6 +3,10 @@ on:
     branches:
       - "*"
 
+concurrency:
+  group: ${{ github.head_ref || github.ref_name }}
+  cancel-in-progress: true
+
 jobs:
   buid:
     runs-on: ubuntu-latest
