--- a/.github/workflows/work.yml
+++ b/.github/workflows/work.yml
@@ -7,8 +7,24 @@ on:
       - "*"
 
 jobs:
-  buid:
+  # see: https://github.com/fkirc/skip-duplicate-actions
+  skip_duplicate:
+    continue-on-error: true
     runs-on: ubuntu-latest
+    outputs:
+      should_skip: ${{ steps.skip_check.outputs.should_skip && ! contains(github.ref, 'refs/tags') }}
+    steps:
+      - id: skip_check
+        uses: fkirc/skip-duplicate-actions@master
+        with:
+          concurrent_skipping: "same_content"
+          skip_after_successful_duplicate: "true"
+          do_not_skip: '["pull_request", "workflow_dispatch", "schedule", "release"]'
+
+  buid:
+    needs: skip_duplicate
+    runs-on: ubuntu-latest
+    if: ${{ needs.skip_duplicate.outputs.should_skip != 'true' }}
     steps:
       - name: build
         run: echo "BUILD"
